Fixes #12892 - Module http-forwarded does not appear to be able to use the IP in X-Forwarded-For header with any TLS HTTP request if the module http2 is also loaded.
* Renamed `http-forwarded` to `forwarded` and deprecated `http-forwarded`.
* Made `forwarded` only depend on `server`, rather than `http`; this allows to use the `forwarded` module with TLS only.
* Made `forwarded` be _before_ the `ssl` module, so it is applied to both clear-text and secure connectors.
* Updated documentation.
* Added test case.
* Fixed also `rewrite-customizer` to be _before_ the `ssl` module.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>